hphp/test/slow/array_access/not_supported_exception.php.expectf
Fatal error: Object does not implement ArrayAccess in %s/slow/array_access/not_supported_exception.php on line 14
